sam/sam_ctypes.py


        unix_lib_dirs_list = []
        if bitage.startswith("64"):
            # prefer 64 bit if that is our arch
            unix_lib_dirs_list += ["/lib64", "/usr/lib64"]

        # must include standard libs, since those paths are also used by 64 bit
        # installs
        unix_lib_dirs_list += ["/lib", "/usr/lib"]
        if sys.platform.startswith("linux"):
            # Try and support multiarch work in Ubuntu
            # https://wiki.ubuntu.com/MultiarchSpec
            if bitage.startswith("32"):
                # Assume Intel/AMD x86 compat
                unix_lib_dirs_list += ["/lib/i386-linux-gnu", "/usr/lib/i386-linux-gnu"]
            elif bitage.startswith("64"):
                # Assume Intel/AMD x86 compatible
                unix_lib_dirs_list += [
                    "/lib/x86_64-linux-gnu",
                    "/usr/lib/x86_64-linux-gnu",
                ]
            else:
                # guess...
                unix_lib_dirs_list += glob.glob("/lib/*linux-gnu")
        directories.extend(unix_lib_dirs_list)

        cache = {}
        lib_re = re.compile(r"lib(.*)\.s[ol]")
        # ext_re = re.compile(r"\.s[ol]$")
        for our_dir in directories.ordered():
            try:
                for path in glob.glob("%s/*.s[ol]*" % our_dir):
                    file = os.path.basename(path)

                    # Index by filename
                    cache_i = cache.setdefault(file, set())
                    cache_i.add(path)

                    # Index by library name
                    match = lib_re.match(file)
                    if match:
                        library = match.group(1)
                        cache_i = cache.setdefault(library, set())
                        cache_i.add(path)
            except OSError:
                pass

        self._ld_so_cache = cache

    def getplatformpaths(self, libname):
        if self._ld_so_cache is None:
            self._create_ld_so_cache()

        result = self._ld_so_cache.get(libname, set())
        for i in result:
            # we iterate through all found paths for library, since we may have
            # actually found multiple architectures or other library types that
            # may not load
            yield i


# Windows


class WindowsLibraryLoader(LibraryLoader):
    """Library loader for Microsoft Windows"""

    name_formats = ["%s.dll", "lib%s.dll", "%slib.dll", "%s"]

    class Lookup(LibraryLoader.Lookup):
        """Lookup class for Windows libraries..."""

        def __init__(self, path):
            super(WindowsLibraryLoader.Lookup, self).__init__(path)
            self.access["stdcall"] = ctypes.windll.LoadLibrary(path)


# Platform switching

# If your value of sys.platform does not appear in this dict, please contact
# the Ctypesgen maintainers.

loaderclass = {
    "darwin": DarwinLibraryLoader,
    "cygwin": WindowsLibraryLoader,
    "win32": WindowsLibraryLoader,
    "msys": WindowsLibraryLoader,
}

load_library = loaderclass.get(sys.platform, PosixLibraryLoader)()


def add_library_search_dirs(other_dirs):
    """
    Add libraries to search paths.
    If library paths are relative, convert them to absolute with respect to this
    file's directory
    """
    for path in other_dirs:
        if not os.path.isabs(path):
            path = os.path.abspath(path)
        load_library.other_dirs.append(path)


del loaderclass

# End loader

add_library_search_dirs(['./.libs'])

# Begin libraries
_libs["sam"] = load_library("sam")

# 1 libraries
# End libraries

# No modules

__uint32_t = c_uint# /usr/include/x86_64-linux-gnu/bits/types.h: 42

uint32_t = __uint32_t# /usr/include/x86_64-linux-gnu/bits/stdint-uintn.h: 26

sam_word_t = c_int32# /home/rrt/Software/sam/sam.h: 10

sam_uword_t = uint32_t# /home/rrt/Software/sam/sam.h: 11

sam_float_t = c_float# /home/rrt/Software/sam/sam.h: 12

enum_anon_2 = c_int# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_OK = 0# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_INVALID_OPCODE = (-1)# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_INVALID_ADDRESS = (-2)# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_STACK_UNDERFLOW = (-3)# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_STACK_OVERFLOW = (-4)# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_NOT_NUMBER = (-5)# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_NOT_INT = (-6)# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_NOT_FLOAT = (-7)# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_NOT_CODE = (-8)# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_BAD_BRACKET = (-9)# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_UNPAIRED_FLOAT = (-10)# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_UNPAIRED_PUSH = (-11)# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_INVALID_SWAP = (-12)# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_INVALID_FUNCTION = (-13)# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_BREAK = (-256)# /home/rrt/Software/sam/sam.h: 26

SAM_ERROR_TRAP_INIT = (-257)# /home/rrt/Software/sam/sam.h: 26

# /home/rrt/Software/sam/sam.h: 46
if _libs["sam"].has("sam_stack_peek", "cdecl"):
    sam_stack_peek = _libs["sam"].get("sam_stack_peek", "cdecl")
    sam_stack_peek.argtypes = [sam_uword_t, POINTER(sam_uword_t)]
    sam_stack_peek.restype = c_int

# /home/rrt/Software/sam/sam.h: 47
if _libs["sam"].has("sam_stack_poke", "cdecl"):
    sam_stack_poke = _libs["sam"].get("sam_stack_poke", "cdecl")
    sam_stack_poke.argtypes = [sam_uword_t, sam_uword_t]
    sam_stack_poke.restype = c_int

# /home/rrt/Software/sam/sam.h: 48
if _libs["sam"].has("sam_stack_swap", "cdecl"):
    sam_stack_swap = _libs["sam"].get("sam_stack_swap", "cdecl")
    sam_stack_swap.argtypes = [sam_uword_t, sam_uword_t, sam_uword_t, sam_uword_t]
    sam_stack_swap.restype = sam_word_t

# /home/rrt/Software/sam/sam.h: 49
if _libs["sam"].has("sam_stack_item", "cdecl"):
    sam_stack_item = _libs["sam"].get("sam_stack_item", "cdecl")
    sam_stack_item.argtypes = [sam_word_t, POINTER(sam_uword_t), POINTER(sam_uword_t)]
    sam_stack_item.restype = c_int

# /home/rrt/Software/sam/sam.h: 50
if _libs["sam"].has("sam_find_code", "cdecl"):
    sam_find_code = _libs["sam"].get("sam_find_code", "cdecl")
    sam_find_code.argtypes = [sam_uword_t, POINTER(sam_uword_t)]
    sam_find_code.restype = c_int

# /home/rrt/Software/sam/sam.h: 51
if _libs["sam"].has("sam_pop_stack", "cdecl"):
    sam_pop_stack = _libs["sam"].get("sam_pop_stack", "cdecl")
    sam_pop_stack.argtypes = [POINTER(sam_word_t)]
    sam_pop_stack.restype = c_int

# /home/rrt/Software/sam/sam.h: 52
if _libs["sam"].has("sam_push_stack", "cdecl"):
    sam_push_stack = _libs["sam"].get("sam_push_stack", "cdecl")
    sam_push_stack.argtypes = [sam_word_t]
    sam_push_stack.restype = c_int

# /home/rrt/Software/sam/sam.h: 55
if _libs["sam"].has("sam_run", "cdecl"):
    sam_run = _libs["sam"].get("sam_run", "cdecl")
    sam_run.argtypes = []
    sam_run.restype = sam_word_t

# /home/rrt/Software/sam/sam.h: 56
if _libs["sam"].has("sam_init", "cdecl"):
    sam_init = _libs["sam"].get("sam_init", "cdecl")
    sam_init.argtypes = [POINTER(sam_word_t), sam_uword_t, sam_uword_t]
    sam_init.restype = c_int

# /home/rrt/Software/sam/sam.h: 75
try:
    sam_update_interval = (c_uint).in_dll(_libs["sam"], "sam_update_interval")
except:
    pass

# /home/rrt/Software/sam/sam.h: 77
if _libs["sam"].has("sam_traps_init", "cdecl"):
    sam_traps_init = _libs["sam"].get("sam_traps_init", "cdecl")
    sam_traps_init.argtypes = []
    sam_traps_init.restype = sam_word_t

# /home/rrt/Software/sam/sam.h: 78
if _libs["sam"].has("sam_traps_finish", "cdecl"):
    sam_traps_finish = _libs["sam"].get("sam_traps_finish", "cdecl")
    sam_traps_finish.argtypes = []
    sam_traps_finish.restype = None

# /home/rrt/Software/sam/sam.h: 79
if _libs["sam"].has("sam_traps_process_events", "cdecl"):
    sam_traps_process_events = _libs["sam"].get("sam_traps_process_events", "cdecl")
    sam_traps_process_events.argtypes = []
    sam_traps_process_events.restype = c_int

# /home/rrt/Software/sam/sam.h: 80
if _libs["sam"].has("sam_trap", "cdecl"):
    sam_trap = _libs["sam"].get("sam_trap", "cdecl")
    sam_trap.argtypes = [sam_uword_t]
    sam_trap.restype = sam_word_t

# /home/rrt/Software/sam/sam.h: 81
if _libs["sam"].has("sam_traps_window_used", "cdecl"):
    sam_traps_window_used = _libs["sam"].get("sam_traps_window_used", "cdecl")
    sam_traps_window_used.argtypes = []
    sam_traps_window_used.restype = c_int

# /home/rrt/Software/sam/sam.h: 82
if _libs["sam"].has("sam_getpixel", "cdecl"):
    sam_getpixel = _libs["sam"].get("sam_getpixel", "cdecl")
    sam_getpixel.argtypes = [c_int, c_int]
    sam_getpixel.restype = uint32_t

# /home/rrt/Software/sam/sam.h: 83
if _libs["sam"].has("sam_dump_screen", "cdecl"):
    sam_dump_screen = _libs["sam"].get("sam_dump_screen", "cdecl")
    sam_dump_screen.argtypes = [String]
    sam_dump_screen.restype = None

# /home/rrt/Software/sam/sam.h: 84
if _libs["sam"].has("sam_update_screen", "cdecl"):
    sam_update_screen = _libs["sam"].get("sam_update_screen", "cdecl")
    sam_update_screen.argtypes = []
    sam_update_screen.restype = None

# /home/rrt/Software/sam/sam_private.h: 106
for _lib in _libs.values():
    try:
        SAM_PROGRAM = (sam_word_t * int(4096)).in_dll(_lib, "SAM_PROGRAM")
        break
    except:
        pass

# /home/rrt/Software/sam/sam_private.h: 107
try:
    sam_program_len = (sam_uword_t).in_dll(_libs["sam"], "sam_program_len")
except:
    pass

# /home/rrt/Software/sam/sam_private.h: 110
for _lib in _libs.values():
    if not _lib.has("trap", "cdecl"):
        continue
    trap = _lib.get("trap", "cdecl")
    trap.argtypes = [sam_word_t]
    trap.restype = sam_word_t
    break

# /home/rrt/Software/sam/sam_private.h: 111
for _lib in _libs.values():
    if not _lib.has("trap_tildav2", "cdecl"):
        continue
    trap_tildav2 = _lib.get("trap_tildav2", "cdecl")
    trap_tildav2.argtypes = [sam_uword_t]
    trap_tildav2.restype = sam_word_t
    break

# /home/rrt/Software/sam/sam_opcodes.h: 26
try:
    SAM_OP_SHIFT = (c_int).in_dll(_libs["sam"], "SAM_OP_SHIFT")
except:
    pass

# /home/rrt/Software/sam/sam_opcodes.h: 27
try:
    SAM_OP_MASK = (sam_word_t).in_dll(_libs["sam"], "SAM_OP_MASK")
except:
    pass

enum_SAM_INSN = c_int# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_NOP = 0# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_INT = (SAM_INSN_NOP + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_FLOAT = (SAM_INSN_INT + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN__FLOAT = (SAM_INSN_FLOAT + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_I2F = (SAM_INSN__FLOAT + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_F2I = (SAM_INSN_I2F + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_PUSH = (SAM_INSN_F2I + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN__PUSH = (SAM_INSN_PUSH + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_POP = (SAM_INSN__PUSH + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_DUP = (SAM_INSN_POP + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_SWAP = (SAM_INSN_DUP + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_IDUP = (SAM_INSN_SWAP + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_ISET = (SAM_INSN_IDUP + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_BRA = (SAM_INSN_ISET + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_KET = (SAM_INSN_BRA + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_LINK = (SAM_INSN_KET + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_DO = (SAM_INSN_LINK + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_IF = (SAM_INSN_DO + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_WHILE = (SAM_INSN_IF + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_LOOP = (SAM_INSN_WHILE + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_NOT = (SAM_INSN_LOOP + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30

SAM_INSN_AND = (SAM_INSN_NOT + 1)# /home/rrt/Software/sam/sam_opcodes.h: 30
